--- a/portfolio.css
+++ b/portfolio.css
@@ -305,7 +305,8 @@ footer{
 }
 
 footer > span{
-    flex-basis: 100%;    
+    flex-basis: 100%;
+    margin: 10px;    
 }
 
 @media only screen and (min-width: 650px) and (max-width: 799px){
