--- a/portfolio.css
+++ b/portfolio.css
@@ -13,11 +13,17 @@
     src: url(./media/fonts/verdemoderna.woff);
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0px;
     position: relative;
     font-family: poiret;
     text-align: center;
+    color: rgb(58, 58, 58);
+    background-color: rgb(255, 253, 253);
 }
 
 h2{
@@ -132,20 +138,19 @@ nav{
     font-size: 165%;
     text-decoration-line: none;
     color: black;
-    background-color: white;
+    background-color: rgb(255, 253, 253);
     border-radius: 10%;
     padding: 2% 9%;
     margin: 10px 0px;
 }
 
 /*/////////////////////////     ABOUT ME     ////////////////////////////////////////////////*/
-
 #quote{
     margin: 0px 30px;
 }
 
 #aboutMeHeader{
-    margin-top: 25px;
+    padding-top: 25px;
 }
 
 #aboutMe{
@@ -178,7 +183,7 @@ nav{
 .nail{
     flex-basis: 100%;
     margin: 25px 55px;
-    border-radius: 20%;
+    border-radius: 5%;
     background-color: whitesmoke;
     height: 200px;
     text-decoration: none;
@@ -206,6 +211,8 @@ nav{
     border-radius: 0%;
     background-color: lightcoral;
     background-image: none;
+    transition-duration: 400ms;
+    transition-property: background-color;
 }
 
 .project-text{
@@ -262,6 +269,7 @@ hr{
 #resumeBody{
     text-align: left;
     margin: 10px 13%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .resumeHeader{
@@ -275,7 +283,7 @@ hr{
 }
 
 .classification-container p, .classification-container > span:nth-child(2), #resumeBody > p{
-    font-size: 130%;
+    font-size: 110%;
 }
 
 .classification{
